css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Lato', sans-serif;
}
body{
    height: 100vh;
    background: linear-gradient(180deg, rgba(0,150,136,1) 15%, rgba(212,219,219,1) 15%, rgba(212,219,219,1) 100%);
    display: flex;
    justify-content: space-around;
    align-items: center;
}
#container{
    height: 90%;
    width: 80%;
    margin: 0 auto;
    display: flex;
    flex-flow: row nowrap;
}
/* LEFT COLUMN */
.left-column{
    width: 40%;
    background-color: #eaeaea;
    display: flex;
    flex-flow: column nowrap;
}
/* USER */
.user{
    padding: .3125rem .625rem;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
    height: 3.125rem;
}
.info{
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
}
.user img{
    width: 1.875rem;
    height: 1.875rem;
    border-radius: 50%;
}
.actions{
    display: flex;
    flex-flow: row nowrap;
    gap: .625rem;
    color: #b1b1b1;
}
.actions a{
    text-decoration: none;
    color: inherit;
}
/* NOTIFICATIONS */
.banner-notification{
    background-color: #8edafc;
    height: 3.125rem;
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    gap: .625rem;
    padding: .625rem 1.25rem;
}
.notification{
    padding: .3125rem .625rem;
    height: 1.875rem;
    width: 1.875rem;
    border-radius: 50%;
    background-color: #f2fbff;
    text-align: center;
    line-height: 1.875rem;
    color: #8edafc;
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    justify-content: space-around;
}
.notice{
    display: flex;
    flex-flow: column nowrap;
}
.notice a{
    color: #b1b1b1;
    font-size: .625rem;
}
/* CONTACTS */
.contacts{
    height: 90%;
    background-color: #fafafa;
    display: flex;
    flex-flow: column nowrap;
    overflow: hidden;
}
/* SEARCH */
.search{
    height: 2.5rem;
    background-color: #ffffff;
    color: #b1b1b1;
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    gap: .625rem;
    padding: .625rem;
}
.search i{
    font-size: .75rem;
}
.search a{
    text-decoration: none;
    color: inherit;
}
#filter-chats{
    border: none;
    width: 90%;
    padding: .3125rem;
}
/* CHATS */
.chats{
    display: flex;
    flex-flow: column nowrap;
    overflow: auto;
}
.single-chat{
    padding: .3125rem;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    gap: .3125rem;
    border-bottom: .0625rem solid #cccccc;
}
.single-chat:hover{
    background-color: #cccccc;
    cursor: pointer;
}
.single-chat img{
    height: 1.875rem;
    width: 1.875rem;
    border-radius: 50%;
}
.time{
    font-size: .4375rem;
    color: #b1b1b1;
}
/* RIGHT COLUMN */
.right-column{
    display: flex;
    flex-flow: column nowrap;
    height: 100%;
    width: 60%;
}
/* CHAT HEADER*/
.chat-header{
    height: 3.125rem;
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    justify-content: space-between;
    padding: .625rem;
    background-color: #eaeaea;
}
/* PERSON */
.person{
    display: flex;
    flex-flow: row;
    align-items: center;
    gap: .3125rem;
}
.person img{
    width: 2.5rem;
    height: 2.5rem;
    border-radius: 50%;
}
.person-info{
    display: flex;
    flex-flow: column nowrap;
}
.last-access, .last-message{
    font-size: .625rem;
    color: #b1b1b1;
}
/* CHAT-BOX*/
.chat-box{
    background-image: url(../img/mine.jpg);
    background-repeat: repeat;
    background-size: 70%;
    flex-grow: 1;
    display: flex;
    flex-flow: column nowrap;
    gap: .625rem;
    padding: 1.25rem;
}
.message{
    display: flex;
    flex-flow: row nowrap;
    font-size: .625rem;
    padding: .625rem;
    border-radius: .3125rem;
    width: 40%;
    align-items: center;
    justify-content: space-between;
}
.sent{
    background-color: #d5f9ba;
    align-self: flex-end;
}
.received{
    background-color: #ffffff;
    align-self: flex-start;
}
/* CHAT-FOOTER*/
.chat-footer{
    height: 3.125rem;
    display: flex;
    flex-flow: row nowrap;
    background-color: #eaeaea;
    align-items: center;
    justify-content: space-around;
}
.chat-footer a{
    text-decoration: none;
    color: #6b7376;
}
.chat-footer a .fa-face-smile{
    padding-left: 50%;
}
/* MESSAGE BOX*/
#message-box{
    width: 80%;
    height: 70%;
    border: none;
    padding: .3125rem;
    border-radius: .125rem;
    font-size: .625rem;
}

